gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-cfg_ub_checks.rs
#![crate_type = "lib"]

pub fn ub_checks_are_enabled() -> bool {
    cfg!(ub_checks) // { dg-error ".E0658." "" { target *-*-* } }
}

